tests/cases/scc/error/0003-junkinclude.c
#include "0003-junkinclude.c" bar
